--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,12 +3,12 @@
     <%= link_to "Task App", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Top", root_path, id: "header-list" %></li>
+        <li><%= link_to "Top", root_path, class: "header-list" %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", '#', id: "header-list" %></li>
+          <li><%= link_to "Users", '#', class: "header-list" %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="header-list">
-              Account <b class="caret"></b>
+            <a href="#" class="dropdown-toggle header-list" data-toggle="dropdown" id="dropdown-title">
+              <%= @current_user.name %><b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Show", current_user %></li>
@@ -18,7 +18,7 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Log in", login_path, id: "header-list" %></li>
+          <li><%= link_to "Log in", login_path, class: "header-list" %></li>
         <% end %>
       </ul>
     </nav>
