B8 トップページレイアウト完了

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -90,6 +90,15 @@ p {
   background-color: teal;
 }
 
+#top-main-title {
+  font-style: italic;
+  font-weight: bold;
+}
+
+.jumbotron {
+  background-color: #fff;
+}
+
 /* デバッグウインドウ */
 
 .debug_dump {
