--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -99,6 +99,12 @@ p {
   background-color: #fff;
 }
 
+.dropdown-header {
+  background-color: rgba(200,200,200,0.5);
+  font-weight: bold;
+  color: #777777;
+}
+
 /* デバッグウインドウ */
 
 .debug_dump {
