--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
     <h1><%=  %>のタスク一覧</h1>
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <a class="btn btn-lg btn-primary pull-right" href="/new_task">タスク新規作成</a>
+        <%= link_to "タスク新規作成", new_user_task_path, class: "btn btn-lg btn-primary pull-right" %>
         <table class="table table-hover" id="table-tasks">
           <thead>
             <tr>
@@ -14,16 +14,16 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>
-                <a id="task-name" href="/task">あとで</a>
-              </td>
-              <td>あとで</td>
-              <td>
-                <a class="btn btn-success" href="/edit_task">編集</a>
-                <a data-confirm="「あとで」を削除します。よろしいですか？" class="btn btn-danger" rel="nofollow" data-method="delete" href="/task">削除</a>
-              </td>
-            </tr>
+            <% @tasks.each do |task| %>
+              <tr>
+                <td><%= link_to task.name, "#", id: "task-name" %></td>
+                <td><%= l(task.created_at, format: :long) %></td>
+                <td>
+                  <%= link_to "編集", "#", class: "btn btn-success" %>
+                  <%= link_to "削除", "#", method: :delete, data: { confirm: "「#{task.name}」を削除します。よろしいですか？" }, class: "btn btn-danger" %>
+                </td>
+              </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
