--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Task") %>
 <div class="main tasks-index">
   <div class="container">
-    <h1><%=  %>のタスク一覧</h1>
+    <h1><%= @user.name %>のタスク一覧</h1>
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <%= link_to "タスク新規作成", new_user_task_path, class: "btn btn-lg btn-primary pull-right" %>
