C6 task新規作成機能実装途中

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -5,13 +5,13 @@
   <div class="col-md-8 col-md-offset-2">
     <%= form_with(model: @task, local: true, url: user_tasks_path) do |f| %>
       
-      <%= f.label :名称, class: "label-login" %>
+      <%= f.label :名称, class: "label-form" %>
       <%= f.text_field :name, class: "form-control" %>
       
-      <%= f.label :詳細, class: "label-login" %>
+      <%= f.label :詳細, class: "label-form" %>
       <%= f.text_area :description, rows: 5, class: "form-control" %>
       
-      <%= f.submit "新規登録", class: "btn btn-primary btn-login" %>
+      <%= f.submit "新規登録", class: "btn btn-lg btn-primary btn-login" %>
     <% end %>
   </div>
 </div>
