ユーザー編集更新・詳細ページ作成・実装完了

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <h1>プロフィール</h1>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <table class="table table-borderd" id="table-user">
+      <table class="table table-borderd, teble-condensed user-table">
         <tbody>
           <tr>
             <th class="active col-md-3">ID</th>
