--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,7 @@
 /* ユーザー情報テーブル */
 
-.active {
+.user-table {
+  vertical-align: middle;
   text-align: center;
 }
 
@@ -20,4 +21,12 @@
 
 .btn-user--edit {
   margin-top: 10px;
+}
+
+/* ユーザー一覧ページ */
+
+#table-users {
+  td {
+    vertical-align: middle;
+  }  
 }
