D7,D8完了(タスクサンプル生成,ユーザー削除機能実装)

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,8 +1,12 @@
 /* ユーザー情報テーブル */
 
+.active {
+  text-align: center;
+}
+
 .user-table {
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
 }
 
 /* 入力フォーム */
