--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,7 +16,7 @@
           <tbody>
             <% @tasks.each do |task| %>
               <tr>
-                <td><%= link_to task.name, "#", id: "task-name" %></td>
+                <td><%= link_to task.name, user_tasks_path, id: "task-name" %></td>
                 <td><%= l(task.created_at, format: :long) %></td>
                 <td>
                   <%= link_to "編集", "#", class: "btn btn-success" %>
