C7タスク編集ｷｬﾝｾﾙﾎﾞﾀﾝ実装､C7完了

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,6 +1,18 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+#table-tasks td {
+  vertical-align: middle;
+}
+
 #task-name {
   font-size: 1.8rem;
+}
+
+.label-form {
+  margin-top: 5px;
+}
+
+.btn-form {
+  margin-top: 10px;
 }
