--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,12 +2,12 @@
 <div class="container">
   <h1>タスク詳細</h1>
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <table class="table table-borderd, teble-condensed user-table">
+    <div class="col-md-10 col-md-offset-1">
+      <table class="table table-borderd, table-task">
         <tbody>
           <tr>
-            <th class="active col-md-3">ID</th>
-            <td class="col-md-9"><%= @tasks.id %></td>
+            <th class="active col-md-2">ID</th>
+            <td class="col-md-10"><%= @tasks.id %></td>
           </tr>
           <tr>
             <th class="active">名称</th>
@@ -15,7 +15,7 @@
           </tr>
           <tr>
           <th class="active">詳細</th>
-          <td><%= @tasks_description %></td>
+          <td><%= @tasks.description %></td>
           </tr>
           <tr>
             <th class="active">作成日</th>
@@ -27,6 +27,8 @@
           </tr>
         </tbody>
       </table>
+      <%= link_to "編集", edit_user_task_path(current_user, @tasks.id), class: "btn btn-lg btn-success" %>
+      <%= link_to "削除", user_tasks_path, method: :delete, data: { confirm: "「#{@tasks.name}」を削除します。よろしいですか？" }, class: "btn btn-lg btn-danger" %>
     </div>
   </div>
 </div>
