--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -20,7 +20,7 @@
                 <td><%= l(task.created_at, format: :long) %></td>
                 <td>
                   <%= link_to "編集", edit_user_task_path(current_user, task.id), class: "btn btn-success" %>
-                  <%= link_to "削除", user_tasks_path, method: :delete, data: { confirm: "「#{task.name}」を削除します。よろしいですか？" }, class: "btn btn-danger" %>
+                  <%= link_to "削除", user_task_path(@user.id, task.id), method: :delete, data: { confirm: "「#{task.name}」を削除します。よろしいですか？" }, class: "btn btn-danger" %>
                 </td>
               </tr>
             <% end %>
