--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -28,7 +28,7 @@
         </tbody>
       </table>
       <%= link_to "編集", edit_user_task_path(current_user, @tasks.id), class: "btn btn-lg btn-success" %>
-      <%= link_to "削除", user_tasks_path, method: :delete, data: { confirm: "「#{@tasks.name}」を削除します。よろしいですか？" }, class: "btn btn-lg btn-danger" %>
+      <%= link_to "削除", user_task_path(@user.id, @tasks.id), method: :delete, data: { confirm: "「#{@tasks.name}」を削除します。よろしいですか？" }, class: "btn btn-lg btn-danger" %>
     </div>
   </div>
 </div>
