--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -4,6 +4,7 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <%= form_with(model: @task, url: user_tasks_path, local: true,) do |f| %>
+      <%= render 'shared/error_messages', object: @task %>
       
       <%= f.label :名称, class: "label-form" %>
       <%= f.text_field :name, class: "form-control" %>
