--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,7 +3,7 @@
   <h1>タスク詳細</h1>
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <table class="table table-borderd, table-task">
+      <table class="table table-borderd table-task">
         <tbody>
           <tr>
             <th class="active col-md-2">ID</th>
