--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,23 +6,23 @@
       <table class="table table-borderd table-task">
         <tbody>
           <tr>
-            <th class="active col-md-2">ID</th>
+            <th class="active col-md-2"><%= Task.human_attribute_name :id %></th>
             <td class="col-md-10"><%= @tasks.id %></td>
           </tr>
           <tr>
-            <th class="active">名称</th>
+            <th class="active"><%= Task.human_attribute_name :name %></th>
             <td><%= @tasks.name %></td></td>
           </tr>
           <tr>
-          <th class="active">詳細</th>
-          <td><%= @tasks.description %></td>
+          <th class="active"><%= Task.human_attribute_name :description %></th>
+          <td><%= description_url_to_link(@tasks.description).html_safe %></td>
           </tr>
           <tr>
-            <th class="active">作成日</th>
+            <th class="active"><%= Task.human_attribute_name :created_at %></th>
             <td><%= l(@tasks.created_at, format: :long) %></td>
           </tr>
           <tr>
-            <th class="active">更新日</th>
+            <th class="active"><%= Task.human_attribute_name :updated_at %></th>
             <td><%= l(@tasks.updated_at, format: :long) %></td>
           </tr>
         </tbody>
