--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,9 +1,19 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.table-task th {
+  vertical-align: middle;
+  white-space: nowrap;
+  text-align: center;
+}
+
 .table-task td {
   vertical-align: middle;
   word-wrap: break-word;
+}
+
+#table-tasks td {
+  vertical-align: middle;
 }
 
 #task-name {
