--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <%= link_to "タスク新規作成", new_user_task_path, class: "btn btn-lg btn-primary pull-right" %>
-        <table class="table table-hover" id="table-tasks">
+        <table class="table table-hover" id: "table-tasks">
           <thead>
             <tr>
               <th>名称</th>
