デザインチェック ﾕｰｻﾞｰﾛｸﾞｲﾝ･新規作成ﾍﾟｰｼﾞまで確認

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -11,11 +11,11 @@
 
 /* 入力フォーム */
 
-.label-signup {
+.label-Signup {
   margin-top: 5px;
 }
 
-.btn-signup {
+.btn-Signup {
   margin-top: 10px;
 }
 
