--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -5,29 +5,47 @@
       <h1 id="top-main-title">TaskApp</h1>
       <p>TaskAppは簡易ToDo管理ツールです。</p>
       <p>↓↓初めてのご利用↓↓</p>
-      <%= link_to "アカウント作成", signup_path, class: "btn btn-lg btn-success" %>
+      <% if logged_in? %>
+        <%= link_to "アカウント作成", signup_path, class: "btn btn-lg btn-success #{"disabled" unless current_user.admin?}" %>
+      <% else %>
+        <%= link_to "アカウント作成", signup_path, class: "btn btn-lg btn-success" %>
+      <% end %>
       <div style="margin-top: 10px;">
-        <%= link_to "ゲストログイン（管理権限）", '#', class: "btn btn-danger" %>
-        <%= link_to "ゲストログイン（一般権限）", '#', class: "btn btn-warning" %>
+        <% if logged_in? %>
+          <%= link_to "ゲストログイン（管理権限）", '#', class: "btn btn-danger #{"disabled" unless current_user.admin?}" %>
+          <%= link_to "ゲストログイン（一般権限）", '#', class: "btn btn-warning #{"disabled" unless current_user.admin?}" %>
+        <% else %>
+          <%= link_to "ゲストログイン（管理権限）", '#', class: "btn btn-danger" %>
+          <%= link_to "ゲストログイン（一般権限）", '#', class: "btn btn-warning" %>
+        <% end %>
       </div>
     </div>
   </div>
   <div class="col-md-4">
     <h1>ログイン</h1>
       <%= form_with(scope: :session, url: login_path, local: true) do |f| %>
-  
-        <%= f.label :メールアドレス, class: "label-login" %>
-        <%= f.email_field :email, class: 'form-control' %>
-  
-        <%= f.label :パスワード, class: "label-login" %>
-        <%= f.password_field :password, class: 'form-control' %>
-        
-        <%= f.label :remember_me, class: "checkbox inline checkbox-login", for: "remember-me" do %>
-          <%= f.check_box :remember_me, id: "remember-me" %>
-          <span>ログイン情報を記憶する</span>
+        <% if logged_in? %>
+          <%= f.label :メールアドレス, class: "label-form" %>
+          <%= f.email_field :email, class: 'form-control', readonly: true %>
+    
+          <%= f.label :パスワード, class: "label-form" %>
+          <%= f.password_field :password, class: 'form-control', readonly: true %>
+          
+          <%= f.submit "ログイン状態です", class: "btn btn-primary btn-block btn-form", disabled: "disabled" %>
+        <% else %>
+          <%= f.label :メールアドレス, class: "label-form" %>
+          <%= f.email_field :email, class: 'form-control' %>
+    
+          <%= f.label :パスワード, class: "label-form" %>
+          <%= f.password_field :password, class: 'form-control' %>
+          
+          <%= f.label :remember_me, class: "checkbox inline checkbox-login", for: "remember-me" do %>
+            <%= f.check_box :remember_me, id: "remember-me" %>
+            <span>ログイン情報を記憶する</span>
+          <% end %>
+    
+          <%= f.submit "ログイン", class: "btn btn-primary btn-block btn-form" %>
         <% end %>
-  
-        <%= f.submit "ログイン", class: "btn btn-primary btn-block btn-login" %>
       <% end %>
   </div>
 </div>
