--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,23 +1,30 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.table-task th {
+#table-task {
+  th {
   vertical-align: middle;
   white-space: nowrap;
   text-align: center;
+  }
 }
 
-.table-task td {
+#table-task {
+  td {
   vertical-align: middle;
   word-wrap: break-word;
+  }
 }
 
-#table-tasks td {
+#table-tasks {
+  td {
   vertical-align: middle;
+  }
 }
 
 #task-name {
   font-size: 1.8rem;
+  vertical-align: middle;
 }
 
 .label-form {
