--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -12,7 +12,7 @@
       <%= f.label :詳細, class: "label-form" %>
       <%= f.text_area :description, rows: 5, class: "form-control" %>
       
-      <%= f.submit "新規登録", class: "btn btn-lg btn-primary btn-login" %>
+      <%= f.submit "新規登録", class: "btn btn-lg btn-primary btn-form" %>
     <% end %>
   </div>
 </div>
