--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -36,11 +36,12 @@
 }
 
 #table-task {
+  box-sizing: border-box;
   table-layout: fixed;
   width: 100%;
 }
 
-.table {
-    border-collapse: collapse;
-    border-spacing: 0;
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
