--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -2,7 +2,12 @@
 @import "bootstrap";
 
 #table-task {
+  border-collapse: collapse;
+}
+
+#table-task {
   th {
+  border: solid 1px silver;
   vertical-align: middle;
   white-space: nowrap;
   text-align: center;
@@ -11,6 +16,7 @@
 
 #table-task {
   td {
+  border: solid 1px silver;
   vertical-align: middle;
   word-wrap: break-word;
   }
@@ -33,15 +39,4 @@
 
 .btn-form {
   margin-top: 10px;
-}
-
-#table-task {
-  box-sizing: border-box;
-  table-layout: fixed;
-  width: 100%;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
 }
